--- a/Hw4-store/package.json
+++ b/Hw4-store/package.json
@@ -10,8 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.4",
     "vue-i18n": "^8.11.2",
     "vue-router": "^3.0.1"
   },
