--- a/Hw4-store/package.json
+++ b/Hw4-store/package.json
@@ -21,7 +21,8 @@
     "vue-axios": "^2.1.4",
     "vue-i18n": "^8.11.2",
     "vue-loading-overlay": "^3.2.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuejs-datepicker": "^1.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
