--- a/Hw4-store/package.json
+++ b/Hw4-store/package.json
@@ -22,7 +22,8 @@
     "vue-i18n": "^8.11.2",
     "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.1",
-    "vuejs-datepicker": "^1.5.4"
+    "vuejs-datepicker": "^1.5.4",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
